# qap

qap/: CMakeLists.txt  graphsGenerator.py  main.cpp  todo.txt
qap/includes/: AlgorithmStrategy.h  Greedy.h  QAP.cpp  QAP.h  QAPException.h  Random.cpp  Random.h  RandomWalk.cpp  RandomWalk.h  Steepest.h  neighbourGenerator.cpp  neighbourGenerator.h  utils.cpp  utils.h
qap/includes/algorithm/: AlgorithmStrategy.cpp  Greedy.cpp  Heuristics.cpp  Heuristics.h  Random.cpp  RandomWalk.cpp  Steepest.cpp
qap/instances/small/data/: .~lock.chr12a.dat#
qap/results/beginningEnd/bur26a/: Greedy  Steepest
qap/results/beginningEnd/chr25a/: Greedy  Steepest
qap/results/beginningEnd/nug25/: Greedy  Steepest
qap/results/beginningEnd/nug27/: Greedy  Steepest
qap/results/bur26a/: Greedy  Heuristics  Random  RandomWalk  Steepest
qap/results/chr12a/: Greedy  Heuristics  Random  RandomWalk  Steepest
qap/results/chr25a/: Greedy  Heuristics  Random  RandomWalk  Steepest
qap/results/ends/bur26a/: Greedy  Steepest
qap/results/ends/nug27/: Greedy  Steepest
qap/results/figures/: algorithmMeanTime_bur26a.eps  algorithmMeanTime_chr25a.eps  algorithmMeanTime_nug25.eps  algorithmMeanTime_nug27.eps  analysis_bur26a_Greedy.eps  analysis_bur26a_Steepest.eps  analysis_nug27_Greedy.eps  analysis_nug27_Steepest.eps  beginningEnd_bur26a.eps  beginningEnd_chr25a.eps  beginningEnd_nug25.eps  beginningEnd_nug27.eps  browsedSolutions-bur26a.eps  browsedSolutions-chr12a.eps  browsedSolutions-chr25a.eps  browsedSolutions-lipa50a.eps  browsedSolutions-lipa50b.eps  browsedSolutions-nug25.eps  browsedSolutions-nug27.eps  browsedSolutions-tai50b.eps  browsedSolutions_bur26a.eps  browsedSolutions_chr25a.eps  browsedSolutions_nug25.eps  browsedSolutions_nug27.eps  efficiency-bur26a.eps  efficiency-chr12a.eps  efficiency-chr25a.eps  efficiency-lipa50a.eps  efficiency-lipa50b.eps  efficiency-nug25.eps  efficiency-nug27.eps  efficiency-tai50b.eps  efficiency_bur26a.eps  efficiency_chr25a.eps  efficiency_nug25.eps  efficiency_nug27.eps  maxValues-bur26a.eps  maxValues-chr12a.eps  maxValues-chr25a.eps  maxValues-lipa50a.eps  (+54 more)
qap/results/lipa50a/: Greedy  Heuristics  Random  RandomWalk  Steepest
qap/results/lipa50b/: Greedy  Heuristics  Steepest
qap/results/nug25/: Greedy  Heuristics  Random  RandomWalk  Steepest
qap/results/nug27/: Greedy  Heuristics  Random  RandomWalk  Steepest
qap/results/quality/chr25a/: Greedy  (+1 more)
qap/results/tai50b/: Greedy  Heuristics  Steepest
qap/tests/: QAPTests.cpp  neighbourhoodTests.cpp  testUtils.cpp
qap/tests/Algorithms/: AlgorithmStrategyTests.cpp  GreedyTests.cpp  HeuristicsTests.cpp  RandomTests.cpp  RandomWalkTests.cpp  SteepestTests.cpp
qap/tests/algorithm/: AlgorithmStrategyTests.cpp  GreedyTests.cpp  HeuristicsTests.cpp  RandomTests.cpp  RandomWalkTests.cpp  SteepestTests.cpp
qap/tests/include/: utilsForTests.cpp  utilsForTests.h
(+6 files in other folders)
